src/test/deca/syntax/invalid/sansobjet/DeclaToBigFloat2.deca
//DeclaToBigFloat2.deca:5:30: Erreur de compilation: flottant arrondi a l'infini
//Description: teste creation folttant infini
//Resultats: erreur ligne 5: arrondi a infini
{
    float t = 3.40282350001E38;

}
